GITForce/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_State__c</fullName>
        <label>OAuth State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Expires__c</fullName>
        <label>Token Expires</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>